# tg-ws-proxy-v2

./: Dockerfile  README.md  docker-run.sh  install.sh  requirements.txt  setup.cfg  setup.py  test.sh
.github/workflows/: build.yml  docker.yml
proxy/: __init__.py  bridge.py  config.py  main.py  mtproto.py  pool.py  rate_limiter.py  socks5.py  telegram_const.py  websocket.py
