[metadata]
name = cs3news-gigavpn
version = 2.0.0
description = CS3NEWS corporate network accelerator
author = CS3NEWS Infrastructure Team
license = Internal

[options]
packages = find:
python_requires = >=3.8
install_requires =
    cryptography>=41.0.0
    pydantic>=2.0.0
    pydantic-settings>=2.0.0

[options.entry_points]
console_scripts =
    cs3news-gigavpn = proxy.main:main